Bug 256610 Crash [ @ nsViewManager::GetMouseEventGrabber] patch by cst@andrew.cmu.edu r=roc sr=roc